--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^3.2.31",
     "vue-demi": "^0.12.3",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue3-perfect-scrollbar": "^1.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.8",
