--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.3",
+    "naive-ui": "^2.34.2",
     "pnpm": "^6.32.3",
     "typescript": "^4.6.2",
     "unocss": "^0.28.1",
