--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "type": "module",
   "private": true,
-  "packageManager": "pnpm@6.32.3",
+  "packageManager": "pnpm@8.8.0",
   "scripts": {
-    "build": "vite-ssg build",
+    "build": "vite build",
     "dev": "vite --port 3333 --open",
     "lint": "eslint .",
     "lint:fix": "eslint --fix --max-warnings 0 .",
@@ -15,49 +16,60 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^8.0.1",
-    "@vueuse/head": "^0.7.5",
+    "@unhead/vue": "^1.7.4",
+    "@unocss/reset": "^0.56.4",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/head": "^2.0.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.12",
-    "prism-theme-vars": "^0.2.2",
-    "vue": "^3.2.31",
-    "vue-demi": "^0.12.3",
-    "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.14",
-    "vue3-perfect-scrollbar": "^1.6.1"
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-demi": "^0.14.6",
+    "vue-i18n": "^9.4.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.8",
-    "@iconify-json/carbon": "^1.1.2",
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/nprogress": "^0.2.0",
-    "@unocss/reset": "^0.28.1",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "critters": "^0.0.16",
+    "@antfu/eslint-config": "^1.0.0-beta.12",
+    "@iconify-json/carbon": "^1.1.21",
+    "@intlify/unplugin-vue-i18n": "^1.2.0",
+    "@types/markdown-it-link-attributes": "^3.0.2",
+    "@types/nprogress": "^0.2.1",
+    "@unocss/eslint-config": "^0.56.4",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue-macros/volar": "^0.15.0",
+    "@vue/test-utils": "^2.4.1",
+    "critters": "^0.0.20",
     "cross-env": "^7.0.3",
-    "cypress": "^9.5.2",
-    "eslint": "^8.11.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "cypress": "^13.3.0",
+    "cypress-vite": "^1.4.2",
+    "eslint": "^8.50.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "https-localhost": "^4.7.1",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.3",
+    "lint-staged": "^14.0.1",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-shiki": "^0.9.0",
     "naive-ui": "^2.34.2",
-    "pnpm": "^6.32.3",
-    "typescript": "^4.6.2",
-    "unocss": "^0.28.1",
-    "unplugin-auto-import": "^0.6.6",
-    "unplugin-vue-components": "^0.18.0",
-    "vite": "^2.8.6",
-    "vite-plugin-inspect": "^0.4.3",
-    "vite-plugin-md": "^0.11.9",
-    "vite-plugin-pages": "^0.22.0",
-    "vite-plugin-pwa": "^0.11.13",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-ssg": "^0.17.11",
-    "vite-ssg-sitemap": "^0.1.8",
-    "vitest": "^0.6.1",
-    "vue-tsc": "^0.33.2"
+    "pnpm": "^8.8.0",
+    "rollup": "^3.29.3",
+    "shiki": "^0.14.4",
+    "simple-git-hooks": "^2.9.0",
+    "taze": "^0.11.3",
+    "typescript": "^5.2.2",
+    "unocss": "^0.56.4",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
+    "unplugin-vue-macros": "^2.6.0",
+    "unplugin-vue-markdown": "^0.24.3",
+    "vite": "^4.4.9",
+    "vite-bundle-visualizer": "^0.10.0",
+    "vite-plugin-inspect": "^0.7.38",
+    "vite-plugin-pages": "^0.31.0",
+    "vite-plugin-pwa": "^0.16.5",
+    "vite-plugin-vue-devtools": "^1.0.0-rc.5",
+    "vite-plugin-vue-layouts": "^0.8.0",
+    "vite-plugin-webfont-dl": "^3.7.6",
+    "vite-ssg": "^0.23.3",
+    "vite-ssg-sitemap": "^0.5.1",
+    "vitest": "^0.34.5",
+    "vue-tsc": "^1.8.15"
   }
 }
